Updates from Overleaf

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,56 @@
+@article{RefWorks:RefID:187-susskind1986expert,
+author={Susskind,Richard E.},
+title={EXPERT SYSTEMS IN LAW: A JURISPRUDENTIAL APPROACH TO ARTIFICIAL INTELLIGENCE AND LEGAL REASONING},
+journal={Modern law review},
+volume={49},
+number={2},
+pages={168–194},
+keywords={Law; Used}, issn={0026-7961},
+doi={10.1111/j.1468-2230.1986.tb01683.x},
+year={1986},
+url={https://api.istex.fr/ark:/67375/WNG-0FV7JD0B-2/fulltext.pdf},
+}
+
+@book{RefWorks:RefID:186-navarro2014deontic,
+author={Navarro,Pablo E. and Rodríguez,Jorge L.},
+title={Deontic Logic and Legal Systems},
+series={Cambridge Introductions to Philosophy and Law},
+abstract={A considerable number of books and papers have analyzed normative concepts using new techniques developed by logicians; however, few have bridged the gap between the English legal culture and the Continental (i.e. European and Latin American) tradition in legal philosophy. This book addresses this issue by offering an introductory study on the many possibilities that logical analysis offers the study of legal systems. The volume is divided into two sections: the first covers the basic aspects of classical and deontic logic and its connections, advancing an explanation of the most important topics of the discipline by comparing different systems of deontic logic and exploring some of the most important paradoxes in its domain. The second section deals with the role of logic in the analysis of legal systems by discussing in what sense deontic logic and the logic of norm-propositions are useful tools for a proper understanding of the systematic structure of law.},
+publisher={Cambridge University Press},
+address={New York},
+edition={1},
+keywords={Law; Used},
+isbn={0521767393},
+url={http://dx.doi.org/10.1017/CBO9781139032711},
+doi={10.1017/CBO9781139032711},
+year={2014},
+translator={Anonymous },
+}
+
+@article{RefWorks:RefID:185-2019transformerxl,
+author={Zihang Dai and Zhilin Yang and Yiming Yang and Jaime Carbonell and Quoc Le and Ruslan Salakhutdinov},
+title={Transformer-XL: Attentive Language Models beyond a Fixed-Length Context},
+journal={Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics},
+keywords={Transformer; Used},
+doi={10.18653/v1/p19-1285},
+year={2019},
+url={https://www.aclweb.org/anthology/P19-1285.pdf},
+}
+
+@misc{RefWorks:RefID:184-zaheerbig,
+author={Zaheer,Manzil and Guruganesh,Guru and Dubey,Avinava and Ainslie,Joshua and Alberti,Chris and Ontanon,Santiago and Pham,Philip and Ravula,Anirudh and Wang,Qifan and Yang,Li and Ahmed,Amr},
+title={Big Bird: Transformers for Longer Sequences},
+abstract={Transformers-based models, such as BERT, have been one of the most successful deep learning models for NLP. Unfortunately, one of their core limitations is the quadratic dependency (mainly in terms of memory) on the sequence length due to their full attention mechanism. To remedy this, we propose, BIGBIRD, a sparse attention mechanism that reduces this quadratic dependency to linear. We show that BIGBIRD is a universal approximator of sequence functions and is Turing complete, thereby preserving these properties of the quadratic, full attention model. Along the way, our theoretical analysis reveals some of the benefits of having O(1) global tokens (such as CLS), that attend to the entire sequence as part of the sparse attention mechanism. The proposed sparse attention can handle sequences of length up to 8x of what was previously possible using similar hardware. As a consequence of the capability to handle longer context, BIGBIRD drastically improves performance on various NLP tasks such as question answering and summarization. We also propose novel applications to genomics data.},
+keywords={Transformer; Used},
+}
+
+@misc{RefWorks:RefID:183-beltagylongformer,
+author={Beltagy,Iz and Peters,Matthew E. and Cohan,Arman},
+title={Longformer: The Long-Document Transformer},
+abstract={Transformer-based models are unable to process long sequences due to their self-attention operation, which scales quadratically with the sequence length. To address this limitation, we introduce the Longformer with an attention mechanism that scales linearly with sequence length, making it easy to process documents of thousands of tokens or longer. Longformer's attention mechanism is a drop-in replacement for the standard self-attention and combines a local windowed attention with a task motivated global attention. Following prior work on long-sequence transformers, we evaluate Longformer on character-level language modeling and achieve state-of-the-art results on text8 and enwik8. In contrast to most prior work, we also pretrain Longformer and finetune it on a variety of downstream tasks. Our pretrained Longformer consistently outperforms RoBERTa on long document tasks and sets new state-of-the-art results on Wiki-Hop and TriviaQA. We finally introduce the Longformer-Encoder-Decoder (LED), a Longformer variant for supporting long document generative sequence-to-sequence tasks, and demonstrate its effectiveness on the arXiv summarization dataset. 1},
+keywords={Used; Document; Transformer},
+}
+
 @article{RefWorks:RefID:167-gardazi2025bert,
 author={Gardazi,Nadia M. and Daud,Ali and Malik,Muhammad K. and Bukhari,Amal and Alsahfi,Tariq and Alshemaimri,Bader},
 title={BERT applications in natural language processing: a review},
@@ -211,16 +264,6 @@ keywords={Knowledge Graph; Used}, issn={2150-8097},
 doi={10.14778/3579075.3579078},
 year={2023},
 url={https://vbn.aau.dk/files/678396868/3579075.3579078.pdf},
-}
-
-@book{RefWorks:RefID:149-hitzler2009foundations,
-author={Hitzler,Pascal and Kr otzsch,Markus and Rudolph,Sebastian},
-title={Foundations of Semantic Web Technologies},
-publisher={Chapman \& Hall / CRC},
-keywords={Knowledge Graph; Used},
-isbn={9781420090505},
-year={2009},
-translator={Anonymous },
 }
 
 @article{RefWorks:RefID:148-reiter1978on,
